[gd_scene load_steps=15 format=3 uid="uid://3taf6nj7o55v"]

[ext_resource type="Script" path="res://scripts/send_code.gd" id="1_7ey0g"]
[ext_resource type="FontFile" uid="uid://cf3a7mowy5fgl" path="res://assets/fonts/kenvector_future.ttf" id="2_0flr6"]
[ext_resource type="Texture2D" uid="uid://cg483dwdrktcw" path="res://assets/images/back.png" id="3_7slrr"]
[ext_resource type="Texture2D" uid="uid://by8n8uapqyxmx" path="res://assets/images/clown.png" id="4_b7b22"]
[ext_resource type="Texture2D" uid="uid://bu1jy0clvmo3y" path="res://assets/images/fermer.png" id="5_6eo4e"]
[ext_resource type="StyleBox" uid="uid://cbkuxplawvtce" path="res://assets/styleBox/signUp_input.tres" id="6_kmn4y"]
[ext_resource type="FontFile" uid="uid://0nrf8fb7tftm" path="res://assets/fonts/Lobster 1.4.otf" id="6_loq0b"]
[ext_resource type="StyleBox" uid="uid://wem08rsh1cos" path="res://assets/styleBox/signUp_input_focus.tres" id="6_r6e7w"]
[ext_resource type="StyleBox" uid="uid://ccqgv0dsve6l0" path="res://assets/styleBox/logIn_button_hover.tres" id="8_dtbr3"]
[ext_resource type="StyleBox" uid="uid://dsmipxadgfpou" path="res://assets/styleBox/logIn_button_normal.tres" id="9_mv6e1"]
[ext_resource type="PackedScene" uid="uid://cbeyupuqn34wv" path="res://scenes/popUp.tscn" id="11_0dcu2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0omyn"]
bg_color = Color(0.152941, 0.14902, 0.14902, 0.780392)
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xum7"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_bottom_left = 7
shadow_color = Color(0.144063, 0.144063, 0.144063, 0.6)
shadow_size = 3
shadow_offset = Vector2(-2, 2)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ikj0v"]
color = Color(1, 1, 1, 1)

[node name="Control" type="Control"]
process_mode = 3
z_index = 5
custom_minimum_size = Vector2(300, 300)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 170.0
offset_right = -320.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7ey0g")

[node name="ShadowBox" type="Label" parent="."]
z_index = -1
layout_mode = 0
offset_left = -3.0
offset_top = 1.0
offset_right = 1283.0
offset_bottom = 815.0
theme_override_styles/normal = SubResource("StyleBoxFlat_0omyn")

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -343.0
offset_top = -181.0
offset_right = 343.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
offset_right = 1275.0
offset_bottom = 800.0
color = Color(0.729412, 0.215686, 0.215686, 1)

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
offset_right = 1275.0
offset_bottom = 800.0
texture = ExtResource("3_7slrr")
expand_mode = 1

[node name="logo" type="TextureRect" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_left = 456.0
offset_top = 32.0
offset_right = 786.0
offset_bottom = 307.0
texture = ExtResource("4_b7b22")
expand_mode = 1

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = 1225.0
offset_right = 1275.0
offset_bottom = 50.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4xum7")

[node name="CancelButton" type="Button" parent="Control"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
icon = ExtResource("5_6eo4e")
flat = true
expand_icon = true

[node name="title" type="Label" parent="."]
layout_mode = 0
offset_left = 431.0
offset_top = 289.0
offset_right = 823.0
offset_bottom = 377.0
theme_override_colors/font_color = Color(0.051971, 0.051971, 0.051971, 0.831373)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("6_loq0b")
theme_override_font_sizes/font_size = 70
text = "Enter the Code "

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 425.0
offset_top = 464.0
offset_right = 853.0
offset_bottom = 527.0

[node name="code1" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0.972549, 0.972549, 0.972549, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = ExtResource("6_r6e7w")
theme_override_styles/normal = ExtResource("6_kmn4y")
placeholder_text = "_"
alignment = 1
max_length = 1

[node name="code2" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0.972549, 0.972549, 0.972549, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = ExtResource("6_r6e7w")
theme_override_styles/normal = ExtResource("6_kmn4y")
placeholder_text = "_"
alignment = 1
max_length = 1

[node name="code3" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0.972549, 0.972549, 0.972549, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = ExtResource("6_r6e7w")
theme_override_styles/normal = ExtResource("6_kmn4y")
placeholder_text = "_"
alignment = 1
max_length = 1

[node name="code4" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0.972549, 0.972549, 0.972549, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = ExtResource("6_r6e7w")
theme_override_styles/normal = ExtResource("6_kmn4y")
placeholder_text = "_"
alignment = 1
max_length = 1

[node name="Cancel" type="Button" parent="."]
layout_mode = 0
offset_left = 597.0
offset_top = 750.0
offset_right = 705.0
offset_bottom = 797.0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxLine_ikj0v")
text = "Cancel"
flat = true

[node name="Enter" type="Button" parent="."]
layout_mode = 2
offset_left = 509.0
offset_top = 592.0
offset_right = 780.0
offset_bottom = 664.0
mouse_default_cursor_shape = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0.666667, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_0flr6")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = ExtResource("8_dtbr3")
theme_override_styles/normal = ExtResource("9_mv6e1")
text = "Enter"

[node name="resendCode" type="Button" parent="."]
layout_mode = 0
offset_left = 540.0
offset_top = 673.0
offset_right = 753.0
offset_bottom = 716.0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Receive no code?"
flat = true

[node name="Control2" parent="." instance=ExtResource("11_0dcu2")]
visible = false
offset_left = 296.0
offset_top = 447.0
offset_right = 996.0
offset_bottom = 667.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="popUp_error" parent="." instance=ExtResource("11_0dcu2")]
visible = false
offset_left = 290.0
offset_top = 409.0
offset_right = 990.0
offset_bottom = 629.0

[connection signal="pressed" from="Control/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Enter" to="." method="_on_enter_pressed"]
[connection signal="pressed" from="resendCode" to="." method="_on_resend_code_pressed"]
